--- a/gradle.tex
+++ b/gradle.tex
@@ -1,1 +1,48 @@
 \chapter{Android Build System}
+
+Ein Build setzt sich aus folgenden Schritten zusammen:
+\begin{enumerate}
+	\item Check out code
+	\item Resolve dependencies
+	\item Compile
+	\item Static code analysis
+	\item Run tests
+	\item Check coverage
+	\item Obfuscate
+	\item Generate documentation
+	\item Create Artifacts
+	\item Deploy
+\end{enumerate}
+In Java sind folgende Buildsysteme verbreitet:
+\begin{tabbing}
+	\hspace{5cm}\=\hspace{8cm}\=\kill
+	\textbf{Ant} \> \textbf{Maven} \> \textbf{Gradle} \\ 
+	Deklarativ (XML) \> Deklarativ (XML ) \> Deklarativ (DSL) \\ 
+	Ant Tasks \>  \> Scriptable Tasks + Lifecycle \\ 
+	Kein Projektmodell \> Projektmodell (POM) \> Projektmodell \\ 
+	Keine Konvention \> Konventionen(Projektstruktur, Lifecycle)  \> Konventionen(Projektstruktur) \\ 
+	Kein Lifecycle \> Plugins \> Plugins \\ 
+	Kein Dependency-Mgmt \> Dependency-Mgmt \> Dependency-Mgmt \\ 
+	Kein Skripting \> Kein Skripting \> Skripting
+\end{tabbing}
+Gradle Buildskripts enthalten Task-Definitionen, Konfigurationen von Modellobjekten und Tasks sowie ausführbaren Code. Ein Gradle-Build läuft in 2 Phasen ab:
+\begin{enumerate}
+	\item Konfiguration des Builds (Erstellung Abhängigkeitsgraph)
+	\item Ausführung des Builds (d.h. von spezifischen Tasks)
+\end{enumerate}
+Ein Gradle-Skript kann Plugins anwenden. Plugin wird als Abhängigkeit hinzugefügt (im \texttt{buildscript}-Block)und mit \texttt{apply} aktiviert. Plugins definieren neue Modellobjekte, fügen einem Projekt weitere Tasks hinzu und konfigurieren Buildparameter gemäss Konventionen.
+
+Das Android Plugin definiert u.a. die folgenden Tasks:
+\begin{itemize}
+	\item \texttt{assemble}
+	\item \texttt{check} $\rightarrow$ \texttt{lint}
+	\item \texttt{test}
+	\item \texttt{build} $\rightarrow$ \texttt{assemble}, \texttt{check}
+	\item \texttt{install}
+	\item \texttt{clean}
+\end{itemize}
+Zusätzlich wird noch das Modellobjekt \texttt{android} definiert.
+
+Android-Applikationen können grundsätzlich aus mehreren Modulen bestehen. Im einfachsten Fall gibt es ein einzelnes \emph{app} Modul mit einem eigenen Build-File. Auf Projekt-Ebene gibt es noch ein \emph{root} Build-File, welches die gemeinsame Build-Konfigurationen definiert. Der Android Build kann von derselben Applikation mehrere Varianten erstellen. Es gibt Buils Types und Product Flavors. Build Types werden typischerweise in \texttt{debug} und \texttt{release} unterschieden (ProGuard, debug-Flag usw.). Product Flavors erlauben mehrere Varianten derselben App zu erstellen (z.B. Funktionalitätsunterschied Free/Paid).
+
+Gradle bietet zudem noch einen Daemon an. Dieser cached das Modell in-memory und so muss nicht immer wieder geparst werden, was zu einem schnelleren Build führt.
