--- a/android-4.tex
+++ b/android-4.tex
@@ -1,4 +1,4 @@
-\chapter{Android 4 – Kommunikation \& Nebenläufigkeit}
+\chapter{Kommunikation \& Nebenläufigkeit}
 
 \section{Netzwerk-Kommunikation (Communication)}
 
