--- a/android-5.tex
+++ b/android-5.tex
@@ -1,4 +1,4 @@
-\chapter{Android 5 – Intents, App-Widgets, Fragments \& Support Library}
+\chapter{Intents, App-Widgets, Fragments \& Support Library}
 
 \section{Intents: Filter \& Auflösung}
 
