--- a/android-6.tex
+++ b/android-6.tex
@@ -1,4 +1,4 @@
-\chapter{Android 6 – Services, Broadcast Receiver, App- Design \& Publikation}
+\chapter{Services, Broadcast Receiver, App- Design \& Publikation}
 
 \section{Services}
 
