--- a/android-2.tex
+++ b/android-2.tex
@@ -57,7 +57,7 @@ Es ist auch möglich direkt im XML eine Methode als Listener zu registrieren (Ab
 
 Android-Apps können in der Action-Bar rechts oben ein Menu mit Optionen pro Activity anbieten (seit Android 3 kein HW-Button mehr nötig). Das Menu wird in der Activity-Methode \texttt{onCreateOptionsMenu(Menu menu)} erzeugt. Bei einem Klick auf einen Menu-Eintrag wird \\ \texttt{onOptionsItemSelected(MenuItem item)} aufgerufen. Für die Erzeugung sind folgende Schritte notwendig:
 \begin{enumerate}
-	\item Ordner \texttt{res/menu} mit .xml-Datei anlegen (Dateiname z.B. main\_menu.xml)
+	\item Ordner \texttt{res/menu} mit XML-Datei anlegen (Dateiname z.B. main\_menu.xml)
 	\item Menu und Items in XML definieren
 	\item Menu ''aufblasen'' mit \texttt{MenuInflater}
 \end{enumerate}
