--- a/webapp.tex
+++ b/webapp.tex
@@ -8,7 +8,7 @@ Mobile Webapplications bieten folgenden Vorteile:
 \begin{itemize}
 	\item Eine Code-Basis für mehrere/alle Plattformen
 	\item Kein App-Store, Download oder Installieren notwendig
-	\item App Kann jederzeit veröffentlicht/verändert werden
+	\item App kann jederzeit veröffentlicht/verändert werden
 	\item Vorhandene Web-Applikation kann zu mobiler App erweitert werden (Stichwort ''Responsive Web Design'')
 \end{itemize}
 und folgende Nachteile:
@@ -45,10 +45,10 @@ Bootstrap ist ein CSS/Javascript Framework welches den mobile first Ansatz verfo
 
 \section{jQuery Mobile}
 
-jQuery Mobile ist ein Framework um mobile Websites zu erstellen. Die einzelnen Elemente (\texttt{<div> \allowbreak </div>}) werden mit dem Attribut \texttt{data-role} genauer bezeichnet. Es gibt z.B. den Wert \texttt{page} für eine Seite und in jeder Page gibt es einen \texttt{header}, \texttt{content} und einen \texttt{footer}. Die Pages werden mit einer \texttt{id} versehen und können mit dieser \texttt{id} in einem Link referenziert werden. Mit dem Wert \texttt{listview} kann auch eine Liste inklusive Navigation erstellt werden. Mit dem Wert \texttt{data-theme} kann das Farbschema eines Grundlayouts geändert werden.
+jQuery Mobile ist ein Framework um mobile Websites zu erstellen. Die einzelnen Elemente (\texttt{<div> \allowbreak </div>}) werden mit dem Attribut \texttt{data-role} genauer bezeichnet. Es gibt z.B. den Wert \texttt{page} für eine Seite und in jeder Page gibt es einen \texttt{header}, \texttt{content} und einen \texttt{footer}. Die Pages werden mit einer \texttt{id} versehen und können mit dieser \texttt{id} in einem Link referenziert werden. Mit dem Wert \texttt{listview} kann auch eine Liste inklusive Navigation erstellt werden. Mit dem Attribut \texttt{data-theme} kann das Farbschema eines Grundlayouts geändert werden.
 
-Mit der normalen jQuery Framework kann die DOM auf eine einfache Art und Weise manipuliert werden. Mit dem \texttt{\$(\dots)} können CSS-IDs, CSS-Klassen und HTML-Elemente ausgewählt und manipuliert werden. Auch eine Kommunikation mit dem Server über Ajax ist möglich. 
+Mit dem normalen jQuery Framework kann die DOM auf eine einfache Art und Weise manipuliert werden. Mit dem \texttt{\$(\dots)} können CSS-IDs, CSS-Klassen und HTML-Elemente ausgewählt und manipuliert werden. Auch eine Kommunikation mit dem Server über Ajax ist möglich. 
 
 \section{Hybrids: Cordova/Phonegap}
 
-Cordova/Phonegap basiert auf HTML5, CSS3 und Javascript und bietet mittels Plugins Zugriff auf die Ressourcen des Gerätes. Phonegap wurde von Adobe gekauft und die Codebase hatten sie dem Apache Projekt überlassen. Apache entwickelt das Projekt unter dem Namen Cordova weiter. Phonegap ist eine Distribution von Cordova und bietet eine einfachen Zugriff auf Adobe-Dienste. Cordova lässt sich mit npm installieren und mit wenigen Befehlen ist eine App erstellt. Diese kann anschliessend in ein natives Format (z.B. apk) gepackt und emuliert werden.
+Cordova/Phonegap basiert auf HTML5, CSS3 und Javascript und bietet mittels Plugins Zugriff auf die Ressourcen des Gerätes. Phonegap wurde von Adobe gekauft und die Codebase hatten sie dem Apache Projekt überlassen. Apache entwickelt das Projekt unter dem Namen Cordova weiter. Phonegap ist eine Distribution von Cordova und bietet einen einfachen Zugriff auf Adobe-Dienste. Cordova lässt sich mit npm installieren und mit wenigen Befehlen ist eine App erstellt. Diese kann anschliessend in ein natives Format (z.B. apk) gepackt und emuliert werden.
